tests/ui/type-alias-impl-trait/different_defining_uses_never_type-2.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses_never_type-2.rs:13:5
   |
LL |     x
   |     ^ expected `i32`, got `()`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type-2.rs:8:31
   |
LL |             let y: Tait<'b> = 1i32;
   |                               ^^^^

error: aborting due to 1 previous error

